--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -23,7 +23,11 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
 }
-
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
 .pic{
     text-align: center;
 }
