--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -23,6 +23,7 @@
                     <ul class="nav nav-pills">
                         <li class="nav-item"><a href="/" class="nav-link" aria-current="page">Home</a></li>
                         <li class="nav-item"><a href="/about" class="nav-link active" aria-current="page">About</a></li>
+                        <li class="nav-item"><a href="/fpat" class="nav-link">F-Pattern</a></li>
                     </ul>
                     <!-- <ul class="navbar-nav  nav-pills">
                           <li class="nav-item">
